eigen vector and values

--- a/assignment1/Assignment_1.ipynb
+++ b/assignment1/Assignment_1.ipynb
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -744,8 +744,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ANSWER**\n",
-    "\n"
+    "**ANSWER**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.\n",
+      "Eigen Values of matrix A are:[11.34481428 -0.51572947  0.17091519]\n",
+      "Eigen Vectors of matrix A are:\n",
+      "[[-0.32798528 -0.73697623  0.59100905]\n",
+      " [-0.59100905 -0.32798528 -0.73697623]\n",
+      " [-0.73697623  0.59100905  0.32798528]]\n",
+      "\n",
+      "\n",
+      "2.\n",
+      "First Order proof\n",
+      "Multiplying Matrix A with Eigen vector\n",
+      "[-3.72093206 -6.70488789 -8.36085845]\n",
+      "\n",
+      "Multiplying Eigen Vector with Eigen Value\n",
+      "[-3.72093206 -6.70488789 -8.36085845]\n",
+      "\n",
+      "The product, Matrix A * Lamda (eigen value) = First Eigen Vector * Lamda\n",
+      "\n",
+      "Second Order proof\n",
+      "Multiplying Matrix A with Product of Matrix A and Eigen vector\n",
+      "[-42.2132832  -76.06570795 -94.85238636]\n",
+      "\n",
+      "Multiplying Eigen Value Product of Eigen Vector with Eigen Value\n",
+      "[-42.2132832  -76.06570795 -94.85238636]\n",
+      "\n",
+      "The product, Matrix A * Matrix A * Lamda (eigen value) = First Eigen Vector * Lamda square\n",
+      "\n",
+      "3.\n",
+      "-1.1102230246251565e-16\n",
+      "-5.828670879282072e-16\n",
+      "-3.885780586188048e-16\n",
+      "The product of all eigen vector is very small (rounded off), which is almost equal to zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import numpy.linalg as lalg\n",
+    "\n",
+    "#1\n",
+    "eigen_values, eigen_vector = lalg.eig(A)\n",
+    "\n",
+    "print('1.')\n",
+    "print('Eigen Values of matrix A are:' + str(eigen_values))\n",
+    "print('Eigen Vectors of matrix A are:')\n",
+    "print(str(eigen_vector))\n",
+    "print()\n",
+    "print()\n",
+    "\n",
+    "#2\n",
+    "print('2.')\n",
+    "eig_val1 = eigen_values[0]\n",
+    "\n",
+    "eig_vec1 = eigen_vector[:,0]\n",
+    "eig_vec2 = eigen_vector[:,1]\n",
+    "eig_vec3 = eigen_vector[:,2]\n",
+    "\n",
+    "print('First Order proof')\n",
+    "\n",
+    "print('Multiplying Matrix A with Eigen vector')\n",
+    "first_order_mat_eigvec =np.dot(A, eig_vec1)\n",
+    "print(first_order_mat_eigvec)\n",
+    "print()\n",
+    "\n",
+    "print('Multiplying Eigen Vector with Eigen Value')\n",
+    "first_order_eigvec_eigval = np.dot(eig_val1,eig_vec1)\n",
+    "print(first_order_eigvec_eigval)\n",
+    "print()\n",
+    "print('The product, Matrix A * Lamda (eigen value) = First Eigen Vector * Lamda')\n",
+    "print()\n",
+    "\n",
+    "print('Second Order proof')\n",
+    "\n",
+    "print('Multiplying Matrix A with Product of Matrix A and Eigen vector')\n",
+    "second_order_mat_eigvec =np.dot(A, first_order_mat_eigvec)\n",
+    "print(second_order_mat_eigvec)\n",
+    "print()\n",
+    "\n",
+    "print('Multiplying Eigen Value Product of Eigen Vector with Eigen Value')\n",
+    "second_order_eigvec_eigval = np.dot(eig_val1,first_order_eigvec_eigval)\n",
+    "print(second_order_eigvec_eigval)\n",
+    "print()\n",
+    "\n",
+    "print('The product, Matrix A * Matrix A * Lamda (eigen value) = First Eigen Vector * Lamda square')\n",
+    "print()\n",
+    "\n",
+    "##3\n",
+    "print('3.')\n",
+    "eig_1_2 = np.dot(eig_vec1, eig_vec2)\n",
+    "print(eig_1_2)\n",
+    "\n",
+    "eig_2_3 = np.dot(eig_vec2, eig_vec3)\n",
+    "print(eig_2_3)\n",
+    "\n",
+    "eig_1_3 = np.dot(eig_vec1, eig_vec3)\n",
+    "print(eig_1_3)\n",
+    "\n",
+    "print('The product of all eigen vector is very small (rounded off), which is almost equal to zero')"
    ]
   },
   {
